[tool.poetry]
name = "pydra-bids"
version = "0.0.7"
description = "Pydra tasks for BIDS I/O"
authors = ["The Aramis Lab"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/aramis-lab/pydra-bids"
documentation = "https://aramis-lab.github.io/pydra-bids/"
keywords = ["pydra", "bids", "neuroimaging"]
packages = [{include = "pydra"}]

[tool.poetry.dependencies]
python = "^3.7"
pydra = "^0.21"
ancpbids = "^0.2.1"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
codespell = {extras = ["toml"], version = "^2.2.2"}

[tool.poetry.group.docs.dependencies]
sphinx = "^5.3.0"
pydata-sphinx-theme = "^0.12.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.black]
target-version = ["py37"]

[tool.isort]
py_version = 37
profile = "black"

[tool.codespell]
summary = ''
skip = ".git"
quiet-level = 3
check-filenames = ''
