[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydra-bids"
version = "0.0.9"
description = "Pydra tasks for BIDS I/O"
readme = "README.md"
requires-python = ">=3.7"
license = "Apache-2.0"
keywords = [
  "pydra",
  "bids",
  "neuroimaging",
]
authors = [
  {name = "Ghislain Vaillant", email = "ghislain.vaillant@icm-institute.org"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "pydra >=0.21",
  "ancpbids >=0.2,<0.3",
]

[project.urls]
documentation = "https://aramis-lab.github.io/pydra-bids"
issues = "https://github.com/aramis-lab/pydra-bids/issues"
repository = "https://github.com/aramis-lab/pydra-bids"

[tool.hatch.build.targets.wheel]
only-include = ["pydra/tasks/bids"]

[tool.black]
extend-exclude = ["docs"]

[tool.codespell]
quiet-level = 3
skip = ".git"

[tool.isort]
profile = "black"
atomic = true
extend_skip = ["docs"]
src_paths = ["pydra"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "--doctest-modules",
  "--doctest-continue-on-failure",
]
testpaths = ["pydra"]
